force-app/main/default/objects/Lighting_Page_Tabs_Component_Config__c/Lighting_Page_Tabs_Component_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use to manage configuration around instances of the Tabs component on Lightning Pages, such as the default (Community pages only)</description>
    <label>Lightning Page Tabs Component Config</label>
</CustomObject>