force-app/main/default/objects/Lighting_Page_Tabs_Component_Config__c/fields/Community_Page_Tab_URL_Reference__c.field-meta.xml
<CustomField>
    <fullName>Community_Page_Tab_URL_Reference__c</fullName>
    <description>On a Community Page, the URL variable that appears when toggling the tabs on a Tabs component. For example, when selecting the second tab there variable whose &apos;=&apos; value is 2.</description>
    <label>Community Page Tab URL Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>