force-app/main/default/objects/Lighting_Page_Tabs_Component_Config__c/fields/I_RS_Community_Page__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Community_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tab is on a Community Page. This influences what is configurable.</description>
    <inlineHelpText>Tab is on a Community Page. This influences what is configurable.</inlineHelpText>
    <label>Community Page</label>
    <type>Checkbox</type>
</CustomField>