force-app/main/default/objects/Lighting_Page_Tabs_Component_Config__c/fields/I_RS_Community_Page_Default_Tab_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Community_Page_Default_Tab_Code__c</fullName>
    <description>For Communities, the index number of the default tab. Can be a number but can often be a random multi-character string. You will need to manually click on a tab on the page to see it&apos;s code.

Also note that the code changes with every Community publishing, and Lightning Page deployment. 

If a code is stored in this setting that does not match an existing tab, the browser simply strips it off.</description>
    <label>Community Page Default Tab Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>