force-app/main/default/objects/Lighting_Page_Tabs_Component_Config__c/fields/I_RS_Object__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object__c</fullName>
    <description>Salesforce object, where applicable</description>
    <inlineHelpText>Salesforce object, where applicable</inlineHelpText>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>